--- a/CourseAplication/CourseAplication/CourseAplication.csproj
+++ b/CourseAplication/CourseAplication/CourseAplication.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F1D92BA0-2F21-42C6-802D-10AC4E5BDF40}</ProjectGuid>
+    <ProjectGuid>{A55FFFC2-8D7E-4564-9ED7-0EE28B23FBF3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PI.CourseAplication</RootNamespace>
-    <AssemblyName>PI.CourseAplication</AssemblyName>
+    <RootNamespace>CourseAplication</RootNamespace>
+    <AssemblyName>CourseAplication</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -50,7 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PI.WebGarten\PI.WebGarten.csproj">
+    <ProjectReference Include="..\..\WebGarten\PI.WebGarten\PI.WebGarten.csproj">
       <Project>{6FF2A3D3-D0BD-47A7-97C5-67C4DBB2A6F5}</Project>
       <Name>PI.WebGarten</Name>
     </ProjectReference>
