--- a/Project/CourseAplication/CourseAplication/CourseAplication.csproj
+++ b/Project/CourseAplication/CourseAplication/CourseAplication.csproj
@@ -50,14 +50,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\WebGarten\PI.WebGarten\PI.WebGarten.csproj">
+    <Folder Include="Controllers\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\WebGarten\PI.WebGarten\PI.WebGarten.csproj">
       <Project>{6FF2A3D3-D0BD-47A7-97C5-67C4DBB2A6F5}</Project>
       <Name>PI.WebGarten</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Views\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
