--- a/Project/CourseAplication/CourseAplication/CourseAplication.csproj
+++ b/Project/CourseAplication/CourseAplication/CourseAplication.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Model\FucRepository.cs" />
     <Compile Include="Model\FucRepositoryLocator.cs" />
     <Compile Include="Model\ProposalRepository.cs" />
+    <Compile Include="Model\ResolveUri.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\FucListView.cs" />
