--- a/Project/CourseAplication/CourseAplication/CourseAplication.csproj
+++ b/Project/CourseAplication/CourseAplication/CourseAplication.csproj
@@ -45,7 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\CreateFucProposalController.cs" />
     <Compile Include="Controllers\FucController.cs" />
+    <Compile Include="Controllers\RootController.cs" />
     <Compile Include="Model\Fuc.cs" />
     <Compile Include="Model\FucProposal.cs" />
     <Compile Include="Model\FucRepository.cs" />
