created view for Proposal (FucProposalView)

--- a/Project/CourseAplication/CourseAplication/CourseAplication.csproj
+++ b/Project/CourseAplication/CourseAplication/CourseAplication.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\EditFormView.cs" />
     <Compile Include="Views\FucListView.cs" />
+    <Compile Include="Views\FucProposalView.cs" />
     <Compile Include="Views\FucView.cs" />
     <Compile Include="Views\RootView.cs" />
   </ItemGroup>
