created views for newFucProposal

--- a/Project/CourseAplication/CourseAplication/CourseAplication.csproj
+++ b/Project/CourseAplication/CourseAplication/CourseAplication.csproj
@@ -46,7 +46,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CreateFucProposalController.cs" />
+    <Compile Include="Views\CreateNewFucProposalView.cs" />
     <Compile Include="Controllers\FucController.cs" />
+    <Compile Include="Views\NewFucProposalEditView.cs" />
+    <Compile Include="Views\NewFucProposalView.cs" />
     <Compile Include="Controllers\RootController.cs" />
     <Compile Include="Model\Fuc.cs" />
     <Compile Include="Model\FucProposal.cs" />
@@ -58,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\EditFormView.cs" />
     <Compile Include="Views\FucListView.cs" />
+    <Compile Include="Views\FucProposalEditView.cs" />
     <Compile Include="Views\FucProposalView.cs" />
     <Compile Include="Views\FucView.cs" />
     <Compile Include="Views\RootView.cs" />
