--- a/Project/CourseAplication/CourseAplication/CourseAplication.csproj
+++ b/Project/CourseAplication/CourseAplication/CourseAplication.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CreateFucProposalController.cs" />
+    <Compile Include="Controllers\EditFucController.cs" />
     <Compile Include="Controllers\FucController.cs" />
     <Compile Include="Controllers\RootController.cs" />
     <Compile Include="Model\Fuc.cs" />
