created models for Users and users repository; User verification in private areas

--- a/Project/CourseAplication/CourseAplication/CourseAplication.csproj
+++ b/Project/CourseAplication/CourseAplication/CourseAplication.csproj
@@ -49,6 +49,9 @@
     <Compile Include="Controllers\ControllerUtils.cs" />
     <Compile Include="Controllers\CreateFucProposalController.cs" />
     <Compile Include="Controllers\EditFucController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Model\User.cs" />
+    <Compile Include="Model\UserRepository.cs" />
     <Compile Include="Views\CreateNewFucProposalView.cs" />
     <Compile Include="Controllers\FucController.cs" />
     <Compile Include="Views\NewFucProposalEditView.cs" />
