--- a/Project/CourseAplicationMVC/CourseAplicationMVC/CourseAplicationMVC.csproj
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/CourseAplicationMVC.csproj
@@ -64,7 +64,6 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\CreateController.cs" />
     <Compile Include="Controllers\FucController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NewFucProposalController.cs" />
@@ -158,15 +157,6 @@
     <Content Include="Views\Fuc\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Create\Detail.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Create\Edit.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Create\Index.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Proposal\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -177,6 +167,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Proposal\Detail.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\NewFucProposal\Detail.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
