--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Web.config
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Web.config
@@ -42,7 +42,7 @@
       </providers>
     </membership>
 
-    <profile>
+    <profile inherits="CourseAplicationMVC.Models.UserProfile">
       <providers>
         <clear/>
         <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
