created user profile editor submissions; created UserProfileModel.cs; added e-mail to editable fields in user profile

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/CourseAplicationMVC.csproj
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/CourseAplicationMVC.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Models\LogInModel.cs" />
     <Compile Include="Models\RegisterUserModel.cs" />
     <Compile Include="Models\UserProfile.cs" />
+    <Compile Include="Models\UserProfileModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
