--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Web.config
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Web.config
@@ -18,6 +18,7 @@
   </appSettings>
 
   <system.web>
+    <authentication mode="Forms" />
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -27,11 +28,15 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-
+<!--
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
-    </authentication>
+    </authentication>-->
 
+    <httpModules>
+      <add name="Authentication"  type="CourseAplicationMVC.Modules.Authentication" /> 
+    </httpModules>
+    
     <membership>
       <providers>
         <clear/>
