--- a/ModelLibrary/ModelLib/ModelLib.csproj
+++ b/ModelLibrary/ModelLib/ModelLib.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{130B4C29-8376-4406-9EBC-9EAACA317B7B}</ProjectGuid>
+    <ProjectGuid>{317A7D3E-2A0C-4C67-BB5B-B91FF66F2825}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CourseAplicationLib</RootNamespace>
-    <AssemblyName>CourseAplicationLib</AssemblyName>
+    <RootNamespace>ModelLib</RootNamespace>
+    <AssemblyName>ModelLib</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
