--- a/Project/CourseAplicationMVC/CourseAplicationMVC/CourseAplicationMVC.csproj
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/CourseAplicationMVC.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\ProposalController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
+    <Compile Include="Filters\AuthenticationFilter.cs" />
     <Compile Include="Modules\Authentication.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
