--- a/Project/CourseAplicationMVC/CourseAplicationMVC/CourseAplicationMVC.csproj
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/CourseAplicationMVC.csproj
@@ -88,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\AutoComplete.css" />
+    <Content Include="Content\Body.css" />
     <Content Include="Content\jquery-ui-1.8.16.custom.css" />
     <Content Include="Content\themes\base\images\ui-anim_basic_16x16.gif" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
