--- a/Project/CourseAplicationMVC/CourseAplicationMVC/CourseAplicationMVC.csproj
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/CourseAplicationMVC.csproj
@@ -88,6 +88,8 @@
   <ItemGroup>
     <Content Include="Content\Body.css" />
     <Content Include="Content\jquery-ui-1.8.16.custom.css" />
+    <Content Include="Content\UnlimitedScrollStyle.css" />
+    <Content Include="Content\themes\base\images\UnlimitedScroll-loader.gif" />
     <Content Include="Content\themes\base\images\ISEL_03_mod_355x60.png" />
     <Content Include="Content\themes\base\images\ui-anim_basic_16x16.gif" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -138,6 +140,7 @@
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\orderby.js" />
     <Content Include="Scripts\Pagination.js" />
+    <Content Include="Scripts\UnlimitedScroll.js" />
     <Content Include="Scripts\SearchScript.js" />
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
