retirar o modulo de modo a funcionar no appharbor

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Web.config
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Web.config
@@ -28,14 +28,14 @@ data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirector
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-<!--
+
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
-    </authentication>-->
+    </authentication>
 
-    <httpModules>
+    <!--  <httpModules>
       <add name="Authentication"  type="CourseAplicationMVC.Modules.Authentication" /> 
-    </httpModules>
+    </httpModules>-->
     
     <membership>
       <providers>
