voltar a usar modulo

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Web.config
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Web.config
@@ -29,13 +29,13 @@ data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirector
       </assemblies>
     </compilation>
 
-    <authentication mode="Forms">
+    <!--<authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
-    </authentication>
+    </authentication>-->
 
-    <!--  <httpModules>
+      <httpModules>
       <add name="Authentication"  type="CourseAplicationMVC.Modules.Authentication" /> 
-    </httpModules>-->
+    </httpModules>
     
     <membership>
       <providers>
