modifying web.config to allow appharbor login

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Web.config
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Web.config
@@ -78,7 +78,9 @@ data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirector
 
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
-    <modules runAllManagedModulesForAllRequests="true"/>  
+    <modules runAllManagedModulesForAllRequests="true">
+      <add name="Authentication"  type="CourseAplicationMVC.Modules.Authentication" />
+    </modules>
   </system.webServer>
 
   <runtime>
